removing scrollbar from and repairing leistungen

--- a/dev/styles/scss/03_modules/mod_referenzen_filter.scss
+++ b/dev/styles/scss/03_modules/mod_referenzen_filter.scss
@@ -10,6 +10,12 @@
         width: 100%;
         overflow-x: scroll;
         padding: 5px 0 20px;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
 
         .ctlg_teaser {
           overflow: visible;
