--- a/dev/styles/scss/03_modules/mod_starseiten_leistungsvorschau.scss
+++ b/dev/styles/scss/03_modules/mod_starseiten_leistungsvorschau.scss
@@ -229,6 +229,11 @@
         &teaser_leist_trigger {
           font-size: $linkSize;
           overflow-x: scroll;
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+          &::-webkit-scrollbar {
+            display: none;
+          }
           .ctlg_teaser {
             min-width: 120px;
             .image_container{
